--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -36,15 +36,13 @@ jobs:
           echo "REFRESH_TOKEN_EXPIRATION_HOURS=${{ secrets.REFRESH_TOKEN_EXPIRATION_HOURS }}" >> .env
           
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker images
-        run: |
-          docker build . -t ${{ secrets.DOCKER_USERNAME }}/messaging:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/messaging:latest
+      - name: Build Docker images
+        run: docker build . -t ${{ secrets.DOCKER_USERNAME }}/messaging:latest
+
+      - name: Push Docker images
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/messaging:latest
 
   deploy:
     needs: build
