--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -31,22 +31,19 @@ jobs:
       - name: Delete old containers
         run: docker rm -f messaging
 
-      - name: Run Docker container
+      - name: Debug Environment Variables
         run: |
-          docker run -d --name messaging \
-            -p ${{ secrets.PORT }}:${{ secrets.PORT }} \
-            -p ${{ secrets.WEB_SOCKET_PORT }}:${{ secrets.WEB_SOCKET_PORT }} \
-            -e PORT=${{ secrets.PORT }} \
-            -e WEB_SOCKET_PORT=${{ secrets.WEB_SOCKET_PORT }} \
-            -e ENVIRONMENT=${{ secrets.ENVIRONMENT }} \
-            -e MONGO_URI=${{ secrets.MONGO_URI }} \
-            -e ELASTIC_APM_SERVER_URL=${{ secrets.ELASTIC_APM_SERVER_URL }} \
-            -e DB_HOST=${{ secrets.DB_HOST }} \
-            -e DB_PORT=${{ secrets.DB_PORT }} \
-            -e DB_USER=${{ secrets.DB_USER }} \
-            -e DB_PASS=${{ secrets.DB_PASS }} \
-            -e DB_NAME=${{ secrets.DB_NAME }} \
-            -e JWT_SECRET=${{ secrets.JWT_SECRET }} \
-            -e ACCESS_TOKEN_EXPIRATION_MINUTES=${{ secrets.ACCESS_TOKEN_EXPIRATION_MINUTES }} \
-            -e REFRESH_TOKEN_EXPIRATION_HOURS=${{ secrets.REFRESH_TOKEN_EXPIRATION_HOURS }} \
-            ${{ secrets.DOCKER_USERNAME }}/messaging:latest
+          echo "PORT=${{ secrets.PORT }}"
+          echo "WEB_SOCKET_PORT=${{ secrets.WEB_SOCKET_PORT }}"
+          echo "ENVIRONMENT=${{ secrets.ENVIRONMENT }}"
+          echo "MONGO_URI=${{ secrets.MONGO_URI }}"
+          echo "ELASTIC_APM_SERVER_URL=${{ secrets.ELASTIC_APM_SERVER_URL }}"
+          echo "DB_HOST=${{ secrets.DB_HOST }}"
+          echo "DB_PORT=${{ secrets.DB_PORT }}"
+          echo "DB_USER=${{ secrets.DB_USER }}"
+          echo "DB_NAME=${{ secrets.DB_NAME }}"
+          echo "ACCESS_TOKEN_EXPIRATION_MINUTES=${{ secrets.ACCESS_TOKEN_EXPIRATION_MINUTES }}"
+          # Do NOT echo sensitive information like DB_PASS and JWT_SECRET
+
+      - name: Run Docker container
+        run: docker run -d --name messaging -p ${{ secrets.PORT }}:${{ secrets.PORT }} -p ${{ secrets.WEB_SOCKET_PORT }}:${{ secrets.WEB_SOCKET_PORT }} -e PORT=${{ secrets.PORT }} -e WEB_SOCKET_PORT=${{ secrets.WEB_SOCKET_PORT }} -e ENVIRONMENT=${{ secrets.ENVIRONMENT }} -e MONGO_URI=${{ secrets.MONGO_URI }} -e ELASTIC_APM_SERVER_URL=${{ secrets.ELASTIC_APM_SERVER_URL }} -e DB_HOST=${{ secrets.DB_HOST }} -e DB_PORT=${{ secrets.DB_PORT }} -e DB_USER=${{ secrets.DB_USER }} -e DB_PASS=${{ secrets.DB_PASS }} -e DB_NAME=${{ secrets.DB_NAME }} -e JWT_SECRET=${{ secrets.JWT_SECRET }} -e ACCESS_TOKEN_EXPIRATION_MINUTES=${{ secrets.ACCESS_TOKEN_EXPIRATION_MINUTES }} -e REFRESH_TOKEN_EXPIRATION_HOURS=${{ secrets.REFRESH_TOKEN_EXPIRATION_HOURS }} ${{ secrets.DOCKER_USERNAME }}/messaging:latest
